--- a/index.html
+++ b/index.html
@@ -442,106 +442,25 @@ document.addEventListener('DOMContentLoaded', function() {
       <div class="ai-subtitle">AI-Powered Navigation</div>
     </div>
     
-    <div class="categories-container">
-      <div class="category">
-        <h2 class="category-title">搜索引擎</h2>
-        <div class="nav-grid">
-          <a href="https://www.google.com" class="nav-item"><span>Google</span></a>
-          <a href="https://www.bing.com" class="nav-item"><span>Bing</span></a>
-          <a href="https://www.baidu.com" class="nav-item"><span>百度</span></a>
-          <a href="https://duckduckgo.com" class="nav-item"><span>DuckDuckGo</span></a>
-          <a href="https://www.ecosia.org" class="nav-item"><span>Ecosia</span></a>
-          <a href="https://yandex.com" class="nav-item"><span>Yandex</span></a>
-        </div>
-      </div>
-
-      <div class="category">
-        <h2 class="category-title">社交媒体</h2>
-        <div class="nav-grid">
-          <a href="https://www.facebook.com" class="nav-item"><span>Facebook</span></a>
-          <a href="https://twitter.com" class="nav-item"><span>Twitter</span></a>
-          <a href="https://www.instagram.com" class="nav-item"><span>Instagram</span></a>
-          <a href="https://www.linkedin.com" class="nav-item"><span>LinkedIn</span></a>
-          <a href="https://www.tiktok.com" class="nav-item"><span>TikTok</span></a>
-          <a href="https://www.reddit.com" class="nav-item"><span>Reddit</span></a>
-          <a href="https://www.pinterest.com" class="nav-item"><span>Pinterest</span></a>
-          <a href="https://www.snapchat.com" class="nav-item"><span>Snapchat</span></a>
-          <a href="https://www.tumblr.com" class="nav-item"><span>Tumblr</span></a>
-          <a href="https://www.whatsapp.com" class="nav-item"><span>WhatsApp</span></a>
-          <a href="https://telegram.org" class="nav-item"><span>Telegram</span></a>
-          <a href="https://discord.com" class="nav-item"><span>Discord</span></a>
-        </div>
-      </div>
-
-      <div class="category">
-        <h2 class="category-title">视频和流媒体</h2>
-        <div class="nav-grid">
-          <a href="https://www.youtube.com" class="nav-item"><span>YouTube</span></a>
-          <a href="https://www.netflix.com" class="nav-item"><span>Netflix</span></a>
-          <a href="https://www.twitch.tv" class="nav-item"><span>Twitch</span></a>
-          <a href="https://www.hulu.com" class="nav-item"><span>Hulu</span></a>
-          <a href="https://www.disneyplus.com" class="nav-item"><span>Disney+</span></a>
-          <a href="https://www.vimeo.com" class="nav-item"><span>Vimeo</span></a>
-        </div>
-      </div>
-
-      <div class="category">
-        <h2 class="category-title">购物和电子商务</h2>
-        <div class="nav-grid">
-          <a href="https://www.amazon.com" class="nav-item"><span>Amazon</span></a>
-          <a href="https://www.ebay.com" class="nav-item"><span>eBay</span></a>
-          <a href="https://www.aliexpress.com" class="nav-item"><span>AliExpress</span></a>
-          <a href="https://www.etsy.com" class="nav-item"><span>Etsy</span></a>
-          <a href="https://www.walmart.com" class="nav-item"><span>Walmart</span></a>
-          <a href="https://www.taobao.com" class="nav-item"><span>Taobao</span></a>
-        </div>
-      </div>
-
-      <div class="category">
-        <h2 class="category-title">新闻和信息</h2>
-        <div class="nav-grid">
-          <a href="https://www.bbc.com" class="nav-item"><span>BBC</span></a>
-          <a href="https://www.cnn.com" class="nav-item"><span>CNN</span></a>
-          <a href="https://www.nytimes.com" class="nav-item"><span>New York Times</span></a>
-          <a href="https://www.reuters.com" class="nav-item"><span>Reuters</span></a>
-          <a href="https://www.theguardian.com" class="nav-item"><span>The Guardian</span></a>
-          <a href="https://www.bloomberg.com" class="nav-item"><span>Bloomberg</span></a>
-        </div>
-      </div>
-
-      <div class="category">
-        <h2 class="category-title">科技和开发</h2>
-        <div class="nav-grid">
-          <a href="https://www.github.com" class="nav-item"><span>GitHub</span></a>
-          <a href="https://www.stackoverflow.com" class="nav-item"><span>Stack Overflow</span></a>
-          <a href="https://www.w3schools.com" class="nav-item"><span>W3Schools</span></a>
-          <a href="https://www.codecademy.com" class="nav-item"><span>Codecademy</span></a>
-          <a href="https://www.geeksforgeeks.org" class="nav-item"><span>GeeksforGeeks</span></a>
-          <a href="https://www.freecodecamp.org" class="nav-item"><span>freeCodeCamp</span></a>
-        </div>
-      </div>
-
-      <div class="category">
-        <h2 class="category-title">音乐和娱乐</h2>
-        <div class="nav-grid">
-          <a href="https://www.spotify.com" class="nav-item"><span>Spotify</span></a>
-          <a href="https://www.apple.com/music" class="nav-item"><span>Apple Music</span></a>
-          <a href="https://www.soundcloud.com" class="nav-item"><span>SoundCloud</span></a>
-          <a href="https://www.pandora.com" class="nav-item"><span>Pandora</span></a>
-          <a href="https://www.last.fm" class="nav-item"><span>Last.fm</span></a>
-          <a href="https://www.bandcamp.com" class="nav-item"><span>Bandcamp</span></a>
-        </div>
-      </div>
-
-      <div class="category">
+<div class="category">
         <h2 class="category-title">实用工具</h2>
         <div class="nav-grid">
           <a href="https://translate.google.com" class="nav-item"><span>Google翻译</span></a>
-          <a href="https://www.wolframalpha.com" class="nav-item"><span>Wolfram Alpha</span></a>
-          <a href="https://www.calculator.net" class="nav-item"><span>在线计算器</span></a>
-          <a href="https://www.speedtest.net" class="nav-item"><span>网速测试</span></a>
-          <a href="https://www.timeanddate.com" class="nav-item"><span>时间日期</span></a>
-          <a href="https://www.wikihow.com" class="nav-item"><span>WikiHow</span></a>
+          <a href="https://d.186404.xyz/" class="nav-item"><span>短链</span></a>
+          <a href="https://dynv6.com/" class="nav-item"><span>dynv6</span></a>
+          <a href="https://fast.com/" class="nav-item"><span>网速测试</span></a>
+          <a href="https://www.cloudns.net/" class="nav-item"><span>cloudns</span></a>
+          <a href="https://www.cloudflare.com/zh-cn/" class="nav-item"><span>cloudflare</span></a>
+          <a href="https://ygpy.net/" class="nav-item"><span>一个朋友</span></a>
+          <a href="https://notebooklm.google/" class="nav-item"><span>谷歌笔记</span></a>
+          <a href="https://email.ml/" class="nav-item"><span>临时邮箱</span></a>
+          <a href="https://www.ahhhhfs.com/" class="nav-item"><span>A姐</span></a>
+          <a href="https://ip.sb/" class="nav-item"><span>IP查询</span></a>
+          <a href="https://img.186404.xyz/" class="nav-item"><span>图床</span></a>
+           <a href="https://www.site.ac/" class="nav-item"><span>site域名转发</span></a>
+          <a href="https://zh.go-to-library.sk/" class="nav-item"><span>Z-Library</span></a>
+          <a href="https://nic.us.kg/" class="nav-item"><span>us.kg域名</span></a>
+          <a href="https://www.spaceship.com/zh/" class="nav-item"><span>spaceship廉价域名</span></a>
         </div>
       </div>
 
@@ -553,7 +472,9 @@ document.addEventListener('DOMContentLoaded', function() {
           <a href="https://www.theverge.com" class="nav-item"><span>The Verge</span></a>
           <a href="https://arstechnica.com" class="nav-item"><span>Ars Technica</span></a>
           <a href="https://www.engadget.com" class="nav-item"><span>Engadget</span></a>
-          <a href="https://www.techradar.com" class="nav-item"><span>TechRadar</span></a>
+          <a href="https://techradar.com" class="nav-item"><span>TechRadar</span></a>
+          <a href="https://b.186404.xyz/" class="nav-item"><span></i>科技博客</span></a>
+          <a href="https://www.cnbeta.com.tw/" class="nav-item"><span></i>cnbeta</span></a>
         </div>
       </div>
 
@@ -576,7 +497,7 @@ document.addEventListener('DOMContentLoaded', function() {
           <a href="https://outlook.live.com" class="nav-item"><span>Outlook</span></a>
           <a href="https://mail.yahoo.com" class="nav-item"><span>Yahoo Mail</span></a>
           <a href="https://www.zoho.com/mail" class="nav-item"><span>Zoho Mail</span></a>
-          <a href="https://protonmail.com" class="nav-item"><span>ProtonMail</span></a>
+          <a href="https://www.protonmail.com" class="nav-item"><span>ProtonMail</span></a>
           <a href="https://mail.qq.com" class="nav-item"><span>QQ邮箱</span></a>
         </div>
       </div>
