--- a/index.html
+++ b/index.html
@@ -442,7 +442,35 @@ document.addEventListener('DOMContentLoaded', function() {
       <div class="ai-subtitle">AI-Powered Navigation</div>
     </div>
     
-<div class="category">
+ <div class="categories-container">
+      <div class="category">
+        <h2 class="category-title">Ai搜索</h2>
+        <div class="nav-grid">
+          <a href="https://www.google.com" class="nav-item"><span>Google</span></a>
+          <a href="https://www.bing.com" class="nav-item"><span>Bing</span></a>
+          <a href="https://websim.ai/" class="nav-item"><span>websim</span></a>
+          <a href="https://chatgpt.com/" class="nav-item"><span>chatgpt</span></a>
+          <a href="https://www.doubao.com/chat/" class="nav-item"><span>傻豆包</span></a>
+          <a href="https://yuanbao.tencent.com/chat/naQivTmsDa" class="nav-item"><span>傻元宝</span></a>
+          <a href="https://poe.com/" class="nav-item"><span></i>poe</span></a>
+          <a href="https://claude.ai/" class="nav-item"><span></i>claude</span></a>
+        </div>
+      </div>
+
+      <div class="category">
+        <h2 class="category-title">社交媒体</h2>
+        <div class="nav-grid">
+          <a href="https://www.facebook.com" class="nav-item"><span>Facebook</span></a>
+          <a href="https://twitter.com" class="nav-item"><span>Twitter</span></a>
+          <a href="https://www.instagram.com" class="nav-item"><span>Instagram</span></a>
+          <a href="https://www.linkedin.com" class="nav-item"><span>LinkedIn</span></a>
+          <a href="https://www.tiktok.com" class="nav-item"><span>TikTok</span></a>
+          <a href="https://www.reddit.com" class="nav-item"><span>Reddit</span></a>
+          <a href="https://github.com/" class="nav-item"><span></i>github</span></a>
+        </div>
+      </div>
+
+      <div class="category">
         <h2 class="category-title">实用工具</h2>
         <div class="nav-grid">
           <a href="https://translate.google.com" class="nav-item"><span>Google翻译</span></a>
