--- a/index.html
+++ b/index.html
@@ -489,6 +489,7 @@ document.addEventListener('DOMContentLoaded', function() {
           <a href="https://zh.go-to-library.sk/" class="nav-item"><span>Z-Library</span></a>
           <a href="https://nic.us.kg/" class="nav-item"><span>us.kg域名</span></a>
           <a href="https://www.spaceship.com/zh/" class="nav-item"><span>spaceship廉价域名</span></a>
+          <a href="https://fontawesome.com/" class="nav-item"><span>fontawesome图标</span></a>
         </div>
       </div>
 
