--- a/index.html
+++ b/index.html
@@ -454,6 +454,7 @@ document.addEventListener('DOMContentLoaded', function() {
           <a href="https://yuanbao.tencent.com/chat/naQivTmsDa" class="nav-item"><span>傻元宝</span></a>
           <a href="https://poe.com/" class="nav-item"><span></i>poe</span></a>
           <a href="https://claude.ai/" class="nav-item"><span></i>claude</span></a>
+          <a href="https://ch和ler.bet/" class="nav-item"><span></i>Ch和lerAi</span></a>
         </div>
       </div>
 
