--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@ document.addEventListener('DOMContentLoaded', function() {
         <div class="nav-grid">
           <a href="https://mail.google.com" class="nav-item"><span>Gmail</span></a>
           <a href="https://outlook.live.com" class="nav-item"><span>Outlook</span></a>
-          <a href="https://mail.yahoo.com" class="nav-item"><span>Yahoo Mail</span></a>
+          <a href="https://22.do/" class="nav-item"><span>GMail临时邮箱</span></a>
           <a href="https://www.zoho.com/mail" class="nav-item"><span>Zoho Mail</span></a>
           <a href="https://www.protonmail.com" class="nav-item"><span>ProtonMail</span></a>
           <a href="https://mail.qq.com" class="nav-item"><span>QQ邮箱</span></a>
