--- a/index.html
+++ b/index.html
@@ -526,9 +526,11 @@ document.addEventListener('DOMContentLoaded', function() {
           <a href="https://mail.google.com" class="nav-item"><span>Gmail</span></a>
           <a href="https://outlook.live.com" class="nav-item"><span>Outlook</span></a>
           <a href="https://22.do/" class="nav-item"><span>GMail临时邮箱</span></a>
-          <a href="https://www.zoho.com/mail" class="nav-item"><span>Zoho Mail</span></a>
+          <a href="https://www.agogmail.com/" class="nav-item"><span>临时gMail</span></a>
           <a href="https://www.protonmail.com" class="nav-item"><span>ProtonMail</span></a>
           <a href="https://mail.qq.com" class="nav-item"><span>QQ邮箱</span></a>
+          <a href="https://www.emailnator.com/" class="nav-item"><span>临时G邮箱</span></a>
+          <a href="https://www.linshigmail.com/" class="nav-item"><span>临时谷歌邮箱</span></a>
         </div>
       </div>
     </div>
